[build-system]
requires = ["setuptools>=57", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = true
target-version = ["py38"]
include = ".*[.]py$"
exclude = "env"
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
skip = ["env", "venv"]
filter_files = true
atomic = true


[tool.pytest.ini_options]
addopts = "--cov=skillbridge --cov-report=html --cov-report=term:skip-covered --cov-branch --no-cov-on-fail"

[tool.coverage.report]
precision = 2
exclude_also = ["raise NotImplementedError"]

[tool.mypy]
files = "skillbridge"
pretty = true
show_error_context = true

disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

implicit_optional = false
strict_optional = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

allow_untyped_globals = false
allow_redefinition = false
implicit_reexport = false
strict_equality = true
