[build-system]
requires = ["setuptools>=57", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = true
target-version = ["py38"]
include = ".*[.]py$"
exclude = "env"
line-length = 100

[tool.pytest.ini_options]
addopts = "--cov=skillbridge --cov-report=html --cov-report=term:skip-covered --cov-branch --no-cov-on-fail"

[tool.coverage.report]
precision = 2
exclude_also = ["raise NotImplementedError"]

[tool.mypy]
python_version = "3.8"
files = "skillbridge"
pretty = true
show_error_context = true

disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

implicit_optional = false
strict_optional = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

allow_untyped_globals = false
allow_redefinition = false
implicit_reexport = false
strict_equality = true

[tool.ruff]
exclude = ["venv", "env", "build"]
line-length = 100
target-version = "py38"
select = ["ALL"]
ignore = [
    "A003",
    "ANN10", "ANN401",
    "B028",
    "D",
    "EM101", "EM102",
    "FBT001", "FBT002",
    "G004",
    "N999",
    "PD901",
    "PLR0911",
    "PT001", "PT013",
    "PTH123",
    "Q000",
    "S101", "S108", "S310", "S311",
    "T201",
    "TCH001", "TCH002", "TCH003",
    "TID252",
    "TRY003", "TRY004", "TRY400",
]

[tool.ruff.per-file-ignores]
"tests/*" = [
    "ANN",
    "ARG001",
    "PLR2004",
    "S603", "S607",
    "SLF001",
    "PERF203",
    "B017",
    "PT011",
]
"update_version.py" = [
    "S603",
    "S607",
]
"docs/conf.py" = [
    "INP001",
    "A001",
]

[tool.ruff.pylint]
max-args = 7
