[metadata]
name = skillbridge
version = attr: skillbridge.version.__version__
author = Niels Buwen
author_email = dev@niels-buwen.de
maintainer = Tobias Markus
maintainer_email = tobias_markus@gmx.net
description = A seamless Python remote bridge to Cadence's Skill in Virtuoso
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/unihd-cag/skillbridge
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    Topic :: Software Development
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
license_files =
    LICENSE

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =

[options.packages.find]
include =
    skillbridge*

[options.entry_points]
console_scripts =
    skillbridge = skillbridge.__main__:main

[options.extras_require]
dev =
    pytest
    pytest-cov
    hypothesis
    mypy
    flake8
doc =
    sphinx

[tool:pytest]
addopts = --cov=skillbridge --cov-report=html --cov-report=term:skip-covered --cov-branch --no-cov-on-fail

[coverage:report]
precision = 2

[mypy]
files = skillbridge
pretty = true
show_error_context = true

disallow_any_unimported = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
allow_untyped_globals = false
allow_redefinition = false
implicit_reexport = false
strict_equality = true

[flake8]
exclude = .git, .mypy_cache, __pycache__, .pytest_cache, .tox, env, htmlcov, .idea
max_line_length = 100
max-complexity = 10
